Wed Nov 13 14:29:34 1996  Tom Yu  <tlyu@mit.edu>

	* ovsec_kadmd.c (main): Note that krb5_defkeyname is an internal
	interface.

	* ovsec_kadmd.c (main): Revert kt_default_name changes.

Tue Nov 12 22:07:05 1996  Tom Yu  <tlyu@mit.edu>

	* ovsec_kadmd.c (main): Use krb5_kt_set_default_name() rather than
	mucking about with global variables.

Fri Sep 27 16:37:47 1996  Barry Jaspan  <bjaspan@mit.edu>

	* ovsec_kadmd.c (main): krb5_klog_syslog doesn't understand %m

Tue Sep 10 14:18:12 1996  Tom Yu  <tlyu@mit.edu>

	* kadmind.M: remove ".so man1/header.doc", fix up .TH call

Tue Sep  3 22:11:25 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (install): Fix typo: ($PROG) -> $(PROG)

Thu Aug 29 16:11:01 1996  Jeff Bigler  <jcb@viola.cygnus.com>

	* Makefile.in (install): added kadmind man page

Mon Aug 12 11:48:19 1996  Barry Jaspan  <bjaspan@mit.edu>

	* ovsec_kadmd.c (main): strip path components of whoami

Thu Aug  1 15:57:08 1996  Barry Jaspan  <bjaspan@DUN-DUN-NOODLES>

	* ovsec_kadmd.c (main): remove useless hex value from error message

Wed Jul 31 15:22:10 1996  Tom Yu  <tlyu@mit.edu>

	* ovsec_kadmd.c: Revert prior change due to netdb.h shuffle

	* ovsec_kadmd.c: remove #include <netdb.h> (already gotten by
		kadm5/kadm_rpc.h)

Wed Jul 24 18:34:33 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* ovsec_kadmd.c (main): Put the #ifdef SO_REUSEADDR at the
		beginning of the line to avoid cpp breakage.

Wed Jul 24 14:28:04 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (CFLAGS): Use $(LD) instead of $(CC) for linking.

Mon Jul 22 04:16:15 1996  Marc Horowitz  <marc@mit.edu>

	* ovsec_kadmd.c (main): open the socket with SO_REUSEADDR.  The
 	old server did this, and the tests require it on some platforms.

Tue Jul  9 16:04:53 1996  Marc Horowitz  <marc@mit.edu>

	* kadm_rpc_svc.c: renamed <ovsec_admin/foo.h> to <kadm5/foo.h>
	* configure.in: cosmetic changes.
	* Makefile.in: complete rewrite.